# raylib-hs

./: EXAMPLES.md  LICENSE  README.md  raylib-hs.cabal
art/graphics/: boar.aseprite  scene-1.aseprite  shepherd.aseprite  shepherd.json
cbits/: raylib-hs.c  raylib-hs.h  raylib_wrapper.c  raylib_wrapper.h
examples/core/: CoreBasicScreenManager.hs  CoreBasicWindow.hs  core-basic-screen-manager.hs  core-basic-window.hs  core_basic_screen_manager.hs
src/: Raylib.hs  Raylib.hsc
src/Raylib/: Audio.hsc  Colors.hs  Colors.hsc  Core.hsc  Enums.hsc  Models.hsc  Shapes.hsc  Structs.hsc  Text.hsc  Textures.hsc
