cabal-version:      3.6
name:               raylib-hs
version:            4.0.0.0
author:             Daniel Cabral
maintainer:         Daniel Cabral

extra-source-files:
    README.md

common common-extensions
  default-extensions: GHC2021

flag examples
  description:       Build examples
  default:           False
  manual:            True

library
    import: common-extensions
    exposed-modules:
        Raylib
        Raylib.Colors
        Raylib.Structs
        Raylib.Core
        Raylib.Models
        Raylib.Text
        Raylib.Shapes
        Raylib.Textures
        Raylib.Audio
    build-depends:    base,
        bytestring,
        text,
        containers
    c-sources:
      cbits/raylib-hs.c
    includes:
      raylib.h
      cbits/raylib-hs.h
    --remember to remove prefix "lib" from the c library name. **sigh** gets me all the time.
    extra-libraries:
        raylib
    hs-source-dirs:      src

executable core-basic-window
    build-depends: base, raylib-hs
    hs-source-dirs: examples/core
    main-is: CoreBasicWindow.hs
    ghc-options: -main-is Examples.CoreBasicWindow

executable core-basic-screen-manager
    build-depends: base, raylib-hs
    hs-source-dirs: examples/core
    main-is: CoreBasicScreenManager.hs
    ghc-options: -main-is Examples.CoreBasicScreenManager


