cabal-version:      3.6
name:               raylib-hs
version:            1.0.0.0
author:             Daniel Cabral
maintainer:         danielc777888@gmail.com
copyright:          2022 Daniel Cabral
build-type:         Simple
license:            Zlib
homepage:           https://github.com/danielc777888/raylib-hs
bug-reports:        https://github.com/danielc777888/raylib-hs/issues
synopsis:           Haskell raylib bindings
description:        Haskell raylib bindings

extra-source-files:
    README.md

common common-extensions
  default-language: Haskell2010

flag examples
  description:       Build examples
  default:           False
  manual:            True

library
    import: common-extensions
    exposed-modules:
        Raylib
        Raylib.Colors
        Raylib.Structs
        Raylib.Enums
        Raylib.Core
        Raylib.Models
        Raylib.Text
        Raylib.Shapes
        Raylib.Textures
        Raylib.Audio
    build-depends:    base,
        bytestring,
        text,
        containers
    c-sources:
      cbits/raylib-hs.c
    includes:
      raylib.h
      cbits/raylib-hs.h
    extra-libraries:
      raylib
    hs-source-dirs:      src
    extra-lib-dirs: /usr/local/lib
    include-dirs: /usr/local/include

executable core-basic-window
    build-depends: base, raylib-hs
    hs-source-dirs: examples/core
    main-is: core_basic_window.hs

executable core-basic-screen-manager
    build-depends: base, raylib-hs
    hs-source-dirs: examples/core
    main-is: core_basic_screen_manager.hs

